--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,56 +1,71 @@
 <!DOCTYPE html>
 <html lang="{{ app.request.locale|split('_')[0] }}">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {% block meta %}
-        {% include "@SuluWebsite/Extension/seo.html.twig" with {
-            "seo": extension.seo|default([]),
-            "content": content|default([]),
-            "localizations": localizations|default([]),
-            "shadowBaseLocale": shadowBaseLocale|default(),
-        } %}
-    {% endblock %}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    {% block style %}{% endblock %}
-</head>
-<body>
-    <header>
-        {% block header %}
-            <nav>
-                <ul>
-                    <li>
-                        <a href="{{ sulu_content_root_path() }}">Homepage</a>
-                    </li>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-                    {% for item in sulu_navigation_root_tree('main') %}
-                        <li>
-                            <a href="{{ sulu_content_path(item.url, item.webspaceKey) }}"
-                               title="{{ item.title }}">{{ item.title }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </nav>
+        {% block meta %}
+            {% include "@SuluWebsite/Extension/seo.html.twig" with {
+                "seo": extension.seo|default([]),
+                "content": content|default([]),
+                "localizations": localizations|default([]),
+                "shadowBaseLocale": shadowBaseLocale|default(),
+            } %}
         {% endblock %}
-    </header>
 
-    <form action="{{ path('sulu_search.website_search') }}" method="GET">
-        <input name="q" type="text" placeholder="Search"/>
-        <input type="submit" value="Go"/>
-    </form>
+        {% block style %}{% endblock %}
+    </head>
+    <body>
+        <div id="wrapper">
+            <header>
+                {% block header %}
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="{{ sulu_content_root_path() }}">Homepage</a>
+                            </li>
 
-    <main>
-        {% block content %}{% endblock %}
-    </main>
+                            {% for item in sulu_navigation_root_tree('main') %}
+                                <li>
+                                    <a href="{{ sulu_content_path(item.url, item.webspaceKey) }}"
+                                       title="{{ item.title }}">{{ item.title }}</a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                        <ul>
+                            {% for localization in localizations %}
+                            <li><a href="{{ localization.url }}">{{ localization.locale }}</a>
+                                {% endfor %}
+                        </ul>
+                    </nav>
+                {% endblock %}
+            </header>
 
-    <footer>
-        {% block footer %}
-            <p>Copyright {{ 'now'|date('Y') }} SULU</p>
-        {% endblock %}
-    </footer>
+        {#    <form action="{{ path('sulu_search.website_search') }}" method="GET">#}
+        {#        <input name="q" type="text" placeholder="Search"/>#}
+        {#        <input type="submit" value="Go"/>#}
+        {#    </form>#}
 
-    {% block javascripts %}{% endblock %}
-</body>
+            <main>
+                <section id="content">
+                {% block content %}{% endblock %}
+                </section>
+            </main>
+
+            <footer>
+                {% block footer %}
+                    <p>Copyright Study Sulu {{ 'now'|date('Y') }} </p>
+                {% endblock %}
+            </footer>
+
+        {#    {% block javascripts %}{% endblock %}#}
+        </div>
+    </body>
 </html>
