--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
         {% block style %}{% endblock %}
     </head>
     <body>
-        <div id="wrapper">
+        <div id="wrapper" class="m-5">
             <header>
                 {% block header %}
                     <nav>
