--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,9 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+                crossorigin="anonymous"></script>
         <script src="../js/all.js"></script>
 
         {% block meta %}
@@ -22,49 +25,51 @@
         {% block style %}{% endblock %}
     </head>
     <body>
-        <div id="wrapper" class="m-5">
-            <header>
-                {% block header %}
-                    <nav>
-                        <ul>
-                            <li>
-                                <a href="{{ sulu_content_root_path() }}">Homepage</a>
-                            </li>
-
-                            {% for item in sulu_navigation_root_tree('main') %}
+        <div class="container py-4">
+            <div id="wrapper" class="rowm-5">
+                <header>
+                    {% block header %}
+                        <nav>
+                            <ul>
                                 <li>
-                                    <a href="{{ sulu_content_path(item.url, item.webspaceKey) }}"
-                                       title="{{ item.title }}">{{ item.title }}</a>
+                                    <a href="{{ sulu_content_root_path() }}">Homepage</a>
                                 </li>
-                            {% endfor %}
-                        </ul>
-                        <ul>
-                            {% for localization in localizations %}
-                            <li><a href="{{ localization.url }}">{{ localization.locale }}</a>
+
+                                {% for item in sulu_navigation_root_tree('main') %}
+                                    <li>
+                                        <a href="{{ sulu_content_path(item.url, item.webspaceKey) }}"
+                                           title="{{ item.title }}">{{ item.title }}</a>
+                                    </li>
                                 {% endfor %}
-                        </ul>
-                    </nav>
-                {% endblock %}
-            </header>
+                            </ul>
+                            <ul>
+                                {% for localization in localizations %}
+                                <li><a href="{{ localization.url }}">{{ localization.locale }}</a>
+                                    {% endfor %}
+                            </ul>
+                        </nav>
+                    {% endblock %}
+                </header>
 
-        {#    <form action="{{ path('sulu_search.website_search') }}" method="GET">#}
-        {#        <input name="q" type="text" placeholder="Search"/>#}
-        {#        <input type="submit" value="Go"/>#}
-        {#    </form>#}
+                {#    <form action="{{ path('sulu_search.website_search') }}" method="GET"> #}
+                {#        <input name="q" type="text" placeholder="Search"/> #}
+                {#        <input type="submit" value="Go"/> #}
+                {#    </form> #}
 
-            <main>
-                <section id="content">
-                {% block content %}{% endblock %}
-                </section>
-            </main>
+                <main>
+                    <section id="content">
+                        {% block content %}{% endblock %}
+                    </section>
+                </main>
 
-            <footer>
-                {% block footer %}
-                    <p>Copyright Study Sulu {{ 'now'|date('Y') }} </p>
-                {% endblock %}
-            </footer>
+                <footer>
+                    {% block footer %}
+                        <p>Copyright Study Sulu {{ 'now'|date('Y') }} </p>
+                    {% endblock %}
+                </footer>
 
-        {#    {% block javascripts %}{% endblock %}#}
+                {#    {% block javascripts %}{% endblock %} #}
+            </div>
         </div>
     </body>
 </html>
