--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        {% block meta %}
+            {% include 'includes/meta.html.twig' %}
+        {% endblock %}
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -13,15 +17,6 @@
                 crossorigin="anonymous"></script>
         <script src="../js/all.js"></script>
 
-        {% block meta %}
-            {% include "@SuluWebsite/Extension/seo.html.twig" with {
-                "seo": extension.seo|default([]),
-                "content": content|default([]),
-                "localizations": localizations|default([]),
-                "shadowBaseLocale": shadowBaseLocale|default(),
-            } %}
-        {% endblock %}
-
         {% block style %}{% endblock %}
     </head>
     <body>
@@ -29,25 +24,7 @@
             <div id="wrapper" class="rowm-5">
                 <header>
                     {% block header %}
-                        <nav>
-                            <ul>
-                                <li>
-                                    <a href="{{ sulu_content_root_path() }}">Homepage</a>
-                                </li>
-
-                                {% for item in sulu_navigation_root_tree('main') %}
-                                    <li>
-                                        <a href="{{ sulu_content_path(item.url, item.webspaceKey) }}"
-                                           title="{{ item.title }}">{{ item.title }}</a>
-                                    </li>
-                                {% endfor %}
-                            </ul>
-                            <ul>
-                                {% for localization in localizations %}
-                                <li><a href="{{ localization.url }}">{{ localization.locale }}</a>
-                                    {% endfor %}
-                            </ul>
-                        </nav>
+                        {% include 'includes/navbar.html.twig' %}
                     {% endblock %}
                 </header>
 
