--- a/templates/pages/homepage.html.twig
+++ b/templates/pages/homepage.html.twig
@@ -9,6 +9,25 @@
 
     <h2>{{ content.linkListTitle }}</h2>
     <p>{{ content.linkListSubtitle }}</p>
+
+    {% for element in content.elements %}
+        <div class="grid__item width-4 width-tablet-6 width-mobile-12">
+            <div class="card">
+                <div class="card__image-holder">
+                    {% set media = sulu_resolve_media(element.excerptImages[0], app.request.locale) %}
+                    <img src="{{ media.formats['600x400'] }}" class="card__image" alt="{{ element.title }"/>
+                </div>
+
+                <div class="card__body">
+                    <h2 class="card__title"><a href="{{ sulu_content_path(element.url) }}">{{ element.title }}</a></h2>
+
+                    <a href="{{ sulu_content_path(element.url) }}"
+                       class="button card__button">{% trans %}READ MORE{% endtrans %}</a>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+
     <ul>
         {% for linkItem in content.linkListItems %}
             <li>
@@ -45,7 +64,8 @@
                     {% for aboutItem in content.aboutItems %}
                         <div class="col-lg-4">
                             <div>
-                                <img src='{{ aboutItem.image.thumbnails['300x200'] }}'  alt="{{ aboutItem.image.title }}">
+                                <img src='{{ aboutItem.image.thumbnails['300x200'] }}'
+                                     alt="{{ aboutItem.image.title }}">
                             </div>
                             <div>
                                 <h3>
